testsuite/tests/properties/invalid_eq/node_cross/test.lkt
from common import FooNode, Lit

class Example: FooNode {
    @exported fun prop(): Bool = node.parent.as[Lit] == node
}
